# advent-of-code

./: .editorconfig  .ghci  .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  DayXX.hs  README.md  aoc.cabal  cabal.project
.github/workflows/: ci.yml
app/: DayXX.stache  Main.hs
src/: AoC.hs  Coordinates.hs  Day.hs  Grid.hs  Map.hs  Parsers.hs  PrettyPrint.hs  Solution.hs  Solutions.hs  TOML.hs  Utils.hs  Year.hs
src/Day/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day15.hs
src/Puzzle/: Convert.hs  Parser.hs  Types.hs  Writer.hs
src/Year/: Y23.hs  Y24.hs  Y25.hs
src/Year/Y23/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day15.hs
src/Year/Y24/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
src/Year/Y25/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
test/: DaySpec.hs  PuzzleParseSpec.hs  TOMLSpec.hs  TestUtils.hs  Y23Spec.hs  Y24Spec.hs  Y25Spec.hs
