cabal-version: 3.4
name: aoc
version: 0.1.0
author: Sondre Aasemoen
maintainer: sondre@eons.io
synopsis: Advent of Code 2023
description: Solutions for Advent of Code 2023
category: Fun
license: MIT
license-file: LICENSE
extra-doc-files: CHANGELOG.md
build-type: Simple

common config
  build-depends: base ^>=4.20
  default-language: GHC2024
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedStrings
    TypeFamilies

  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Werror=missing-deriving-strategies
    -fhide-source-paths
    -fwrite-ide-info

library
  import: config
  hs-source-dirs: src
  exposed-modules:
    AoC
    Day
    Day.Day01
    Day.Day02
    Day.Day03
    Day.Day04
    Day.Day05
    Day.Day06
    Day.Day07
    Day.Day08
    Day.Day09
    Day.Day10
    Day.Day11
    Day.Day12
    Day.Day13
    Day.Day15
    Grid
    PrettyPrint
    Parsers
    TOML
    Utils

  build-depends:
    , containers ^>=0.7
    , megaparsec ^>=9.7
    , MemoTrie ^>=0.6
    , parser-combinators ^>=1.3
    , pretty-simple ^>=4.1
    , text ^>=2.1
    , text-display ^>=0.0

executable aoc
  import: config
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: aoc

test-suite aoc-test
  import: config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: DaySpec TOMLSpec
  build-depends: aoc, hspec ^>=2.11, hspec-megaparsec ^>=2.2, megaparsec ^>=9.7, text ^>=2.1
  build-tool-depends: hspec-discover:hspec-discover ^>=2.11

source-repository head
  type: git
  location: https://github.com/sondr3/advent-of-code-2023.git
