cabal-version: 3.4
name: aoc
version: 0.1.0
author: Sondre Aasemoen
maintainer: sondre@eons.io
synopsis: Advent of Code
description: Solutions for Advent of Code
category: Fun
license: MIT
license-file: LICENSE
extra-doc-files: CHANGELOG.md
build-type: Simple

common config
  build-depends: base ^>=4.21
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    TypeFamilies

  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Werror=missing-deriving-strategies
    -fhide-source-paths
    -fwrite-ide-info

library
  import: config
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    AoC
    Coordinates
    Day
    Grid
    Map
    Parsers
    PrettyPrint
    Puzzle.Parser
    Puzzle.Types
    Puzzle.Writer
    Solution
    Utils
    Year
    Year.Y23
    Year.Y23.Day01
    Year.Y23.Day02
    Year.Y23.Day03
    Year.Y23.Day04
    Year.Y23.Day05
    Year.Y23.Day06
    Year.Y23.Day07
    Year.Y23.Day08
    Year.Y23.Day09
    Year.Y23.Day10
    Year.Y23.Day11
    Year.Y23.Day12
    Year.Y23.Day13
    Year.Y23.Day15
    Year.Y24
    Year.Y24.Day01
    Year.Y24.Day02
    Year.Y24.Day03
    Year.Y24.Day04
    Year.Y24.Day05
    Year.Y24.Day06
    Year.Y24.Day07
    Year.Y24.Day08
    Year.Y24.Day09
    Year.Y24.Day10
    Year.Y24.Day11
    Year.Y25

  build-depends:
    MemoTrie ^>=0.6,
    containers ^>=0.7,
    deepseq ^>=1.5,
    filepath ^>=1.5,
    megaparsec ^>=9.7,
    parser-combinators ^>=1.3,
    pretty-simple ^>=4.1,
    tasty-bench ^>=0.4,
    text ^>=2.1,
    text-display ^>=1.0,

executable aoc
  import: config
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    aoc,
    filepath ^>=1.5,
    haskeline ^>=0.8,
    megaparsec ^>=9.7,
    optparse-applicative ^>=0.19,
    process ^>=1.6,
    stache ^>=2.3,
    text ^>=2.1,
    text-display ^>=1.0,

test-suite aoc-test
  import: config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  -- cabal-gild: discover test --include=**/*Spec.hs --include=**/*Utils.hs --exclude=**/Spec.hs
  other-modules:
    PuzzleParseSpec
    TestUtils
    Y23Spec
    Y24Spec

  build-depends:
    aoc,
    deepseq ^>=1.5,
    hspec ^>=2.11,
    hspec-megaparsec ^>=2.2,
    megaparsec ^>=9.7,
    text ^>=2.1,

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11

source-repository head
  type: git
  location: https://github.com/sondr3/advent-of-code.git
